--- a/index.html
+++ b/index.html
@@ -3,16 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="app.js"></script>
-  <script src="components/card-list.js"></script>
-  <script src="components/card.js"></script>
+  <script src="app-bundle.js"></script>
   <link rel="stylesheet" type="text/css" href="app.css" />
-
 </head>
 
 <body>
-  
+
 <card-list></card-list>
 <card-list></card-list>
 <card-list></card-list>
