MINOR card titles and MVP add new cards

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <body>
 
-<card-list></card-list>
-<card-list></card-list>
-<card-list></card-list>
+<card-list title="To Do"></card-list>
+<card-list title="In Progress"></card-list>
+<card-list title="Done"></card-list>
 
 
 </body>
