--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
 
 <body>
 
-<card-list title="To Do"></card-list>
-<card-list title="In Progress"></card-list>
-<card-list title="Done"></card-list>
-
-
+<board title="Erics Trello board" color="green"></board>
+<board title="Erics second Trello board" color="red"></board>
 </body>
 
 </html>
